--- a/data/equipment/weapon-00-I5DJUbAFGMwa6qCz.htm
+++ b/data/equipment/weapon-00-I5DJUbAFGMwa6qCz.htm
@@ -1,10 +1,8 @@
 Name: Scourge
-Nom: Fléau
-État: changé
-État d'origine: officielle
+Nom: Chat à neuf queues
+État: officielle
 
 ------ Description (en) ------
 <p>A scourge-also known as a cat-o'-nine-tails-is a set of several knotted cords made from cotton or leather and attached to a handle. While most scourges are more suitable for torture than combat, the weapons used by the Order of the Scourge have metal barbs woven in to pierce clothing and armor. The scourge is a martial melee weapon.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">cette arme consiste en une poignée de bois attachée à une boule ou à un cylindre à pointes au moyen d’une chaîne, d’une corde ou d’une
-lanière de cuir..&nbsp;</span></p>
+<p>Un chat à neuf queues est composé d’un ensemble de plusieurs cordes à nœuds faites de coton ou de cuir, et reliées à une poignée. Même si les chats à neuf queues sont au départ des armes destinées à la pratique de la torture, ceux utilisés par l’ordre du Fléau possèdent des crochets de métal transperçant les vêtements et les armures. Le chat à neuf queues est une arme de guerre de corps à corps.</p>
