--- a/data/equipment/weapon-00-6qJkA6fnHHiF4CEV.htm
+++ b/data/equipment/weapon-00-6qJkA6fnHHiF4CEV.htm
@@ -5,4 +5,4 @@ Nom: Lame tempête Tengu
 ------ Description (en) ------
 <p>This fan-shaped sword, designed by members of the tengu ancestry, has five broad blades that join at its hilt. Tengu sailors also use gale blades as makeshift weather vanes, as the sword spins to show the wind's direction when loosely held aloft.</p>
 ------ Description (fr) ------
-<p>Cette épée en forme d'éventail, conçue par des membres de l'héritage tengu, possède cinq larges lames qui se rejoignent au niveau du pommeau. Les marins tengu utilisent aussi des lames tempêtes comme expédients de biroutes, puisque l'épée ploie dans la direction du vent lorsqu'ils sont tenus de manière relâchée.</p>
+<p>Cette épée en forme d'éventail, conçue par des membres de l'héritage Tengu, possède cinq larges lames qui se rejoignent au niveau du pommeau. Les marins Tengu utilisent aussi les lames tempêtes comme des girouettes, puisque l'épée ploie dans la direction du vent lorsqu'ils sont tenus de manière relâchée.</p>
