--- a/data/equipment/weapon-00-pnA6uENYDDduWmAn.htm
+++ b/data/equipment/weapon-00-pnA6uENYDDduWmAn.htm
@@ -1,8 +1,8 @@
 Name: Thunder Sling
-Nom: 
-État: auto-trad
+Nom: Fronde tonnerre
+État: libre
 
 ------ Description (en) ------
 <p>Tengu use these specialized slings to fire darts further and with greater force than when thrown by hand, which is particularly effective when attacking from great heights. A thunder sling uses darts as ammunition. It can also hurl blowgun darts as ammunition but deals 1d4 piercing damage instead of 1d6 when used this way.</p>
 ------ Description (fr) ------
-Les Tengu utilisent ces frondes spécialisées pour lancer des fléchettes plus loin et avec plus de force que lorsqu'elles sont lancées à la main, ce qui est particulièrement efficace pour attaquer depuis de grandes hauteurs. Une fronde du tonnerre utilise des fléchettes comme munitions. Elle peut également lancer des fléchettes de sarbacane comme munitions, mais elle inflige 1d4 points de dégâts perforants au lieu de 1d6 lorsqu'elle est utilisée de cette façon.</p>
+<p>Les tengus utilisent ces frondes spécialisées pour lancer des fléchettes plus loin et avec plus de force que lorsqu'elles sont lancées à la main, ce qui est particulièrement efficace pour attaquer depuis de grandes hauteurs. Une fronde du tonnerre utilise des fléchettes comme munitions. Elle peut également lancer des fléchettes de sarbacane comme munitions, mais elle inflige 1d4 points de dégâts perforants au lieu de 1d6 lorsqu'elle est utilisée de cette façon.</p>
