--- a/data/equipment/weapon-01-Hh3F4DEP6aVulwQN.htm
+++ b/data/equipment/weapon-01-Hh3F4DEP6aVulwQN.htm
@@ -1,8 +1,8 @@
 Name: Stiletto Pen
-Nom: 
-État: auto-trad
+Nom: Stylo à lame
+État: libre
 
 ------ Description (en) ------
 <p>This weapon is a fully functional, lavish ink pen with a clip that can be attached to a pocket or bandoleer and easily retrieved as a free action. Using an action to Interact with the pen allows its wielder to disengage a stiletto blade that slides free of the upper body or reattach the previously removed blade.</p>
 ------ Description (fr) ------
-<p>Cette arme est un stylo à encre somptueux entièrement fonctionnel avec un clip qui peut être attaché à une poche ou un bandoleer et facilement récupéré comme une action libre. L'utilisation d'une action pour interagir avec le stylo permet à son détenteur de désengager une lame stiletto qui glisse librement du haut du corps ou de rattacher la lame précédemment retirée.</p>
+<p>Cette arme est un stylo à encre somptueux entièrement fonctionnel avec un clip qui peut être attaché à une poche ou une bandoulière et facilement récupéré par une action libre. L'utilisation d'une action pour interagir avec le stylo permet à son détenteur de faire jaillir une lame de stiletto qui glisse librement du haut du corps ou de rattacher la lame précédemment sortie.</p>
