--- a/data/equipment/weapon-00-1Uvz5xJpE5UvOFjJ.htm
+++ b/data/equipment/weapon-00-1Uvz5xJpE5UvOFjJ.htm
@@ -1,8 +1,8 @@
 Name: Wish Knife
-Nom: 
-État: auto-trad
+Nom: Couteau à souhait
+État: libre
 
 ------ Description (en) ------
 <p>Much like a wish blade, the length of this knife is scored with intricate grooves capable of retaining energy. Wish knives are lighter than their counterparts, making them the weapon of choice for agile combatants.</p>
 ------ Description (fr) ------
-<p>Tout comme une lame de souhait, la longueur de ce couteau est marquée de rainures complexes capables de retenir l'énergie. Les couteaux de souhaits sont plus légers que leurs homologues, ce qui en fait l'arme de choix pour les combattants agiles.</p>
+<p>Tout comme une lame à souhait, toute la longueur de ce couteau est marquée de rainures complexes capables de retenir l'énergie. Les couteaux de souhaits sont plus légers que leurs homologues, ce qui en fait l'arme de choix pour les combattants agiles.</p>
