--- a/data/equipment/armor-13-TyW1XOWYMM2xHGaI.htm
+++ b/data/equipment/armor-13-TyW1XOWYMM2xHGaI.htm
@@ -26,7 +26,7 @@ Nom: Cri de méduse (Supérieur)
 L'effroyable visage d'une tête de <em>méduse </em>tuée se détache de ce <em>bouclier d'acier</em> (Solidité 15, PV 60, SR 30). Le bouclier est équipé d'une épaisse housse de cuir pour dissimuler la tête.</p>
 <p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interagir (visuel);</p>
 <p><strong>Fréquence</strong> une fois par heure;</p>
-<p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 9 mètres. Le bouclier lance<em> Chair en pierre</em> avec une portée de 9 mètres et un DD de 35.</p>
+<p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 9 mètres. Le bouclier lance @Compendium[pf2e.spells-srd.znv4ECL7ZtuiagtA]{Chair en pierre} avec une portée de 9 mètres et un DD de 35.</p>
 <p><strong>Conditions de fabrication</strong> Les matières premières initiales doivent inclure la tête d'une méduse.</p>
 <table style="height : 32px;" ; border="1">
 <tbody>
