--- a/data/equipment/armor-09-Blp9Ha1YeIJOeFls.htm
+++ b/data/equipment/armor-09-Blp9Ha1YeIJOeFls.htm
@@ -3,7 +3,7 @@ Nom: Costume de chevaucheur pailleté
 État: libre
 
 ------ Description (en) ------
-<p>This <em>+1 resilient </em>studded leather armor is adorned with colorful sequins that sparkle in even the faintest light.</p>
+<p>This <em>+1 resilient </em>studded leather is adorned with colorful sequins that sparkle in even the faintest light.</p>
 <p>While wearing the spangled rider's suit, you gain a +2 item bonus to Command an Animal you are riding.</p>
 <p>Any animal you ride automatically knows the Drop Prone and Step basic actions, in addition to any other basic actions it knows (normally only Leap, Seek, Stand, Stride, and Strike).</p>
 <p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> (move)</p>
@@ -15,7 +15,7 @@ Nom: Costume de chevaucheur pailleté
 <li>+2 item bonus to Command an Animal you are riding</li>
 </ul>
 ------ Description (fr) ------
-<p>Cette armure de cuir clouté <em>résilience +1 </em>est ornée de paillettes colorées qui scintillent même dans la plus faible lumière.</p>
+<p>Cette <em>armure de cuir clouté de résilience +1 </em>est ornée de paillettes colorées qui scintillent même dans la plus faible lumière.</p>
 <p>Lorsque vous portez le costume de chevaucheur pailleté, vous gagnez un bonus d'objet de +2 pour Diriger un animal que vous montez.</p>
 <p>Tout animal que vous montez connaît automatiquement les actions de base Se jeter à terre et Faire un pas, en plus de toutes les autres actions de base qu'il connaît (normalement seulement Bondir, Chercher, Se relever, Marcher rapidement et Frapper).</p>
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> (déplacement)</p>
