--- a/data/equipment/armor-09-Blp9Ha1YeIJOeFls.htm
+++ b/data/equipment/armor-09-Blp9Ha1YeIJOeFls.htm
@@ -16,10 +16,10 @@ Nom: Costume de chevaucheur pailleté
 </ul>
 ------ Description (fr) ------
 <p>Cette <em>armure de cuir clouté de résilience +1 </em>est ornée de paillettes colorées qui scintillent même dans la plus faible lumière.</p>
-<p>Lorsque vous portez le costume de chevaucheur pailleté, vous gagnez un bonus d'objet de +2 pour Diriger un animal que vous montez.</p>
+<p>Lorsque vous portez le costume de chevaucheur pailleté, vous gagnez un bonus d'objet de +2 pour @Compendium[pf2e.bestiary-ability-glossary-srd.uJSseLa57HZYSMUu]{Diriger un animal} que vous montez.</p>
 <p>Tout animal que vous montez connaît automatiquement les actions de base Se jeter à terre et Faire un pas, en plus de toutes les autres actions de base qu'il connaît (normalement seulement Bondir, Chercher, Se relever, Marcher rapidement et Frapper).</p>
 <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> (déplacement)</p>
-<p><strong>Déclencheur</strong> Vous subissez des dégâts lorsque vous êtes monté ou que votre monture se jette à terre</p>
+<p><strong>Déclencheur</strong> Vous subissez des dégâts lorsque vous chevauchez ou que votre monture se jette à terre</p>
 <p><strong>Effet</strong> Vous descendez de votre monture dans un espace adjacent.</p>
 <hr />
 <p>Automatically applied effects:</p>
