--- a/data/backgrounds/DBxOUwM7qhGH8MrF.htm
+++ b/data/backgrounds/DBxOUwM7qhGH8MrF.htm
@@ -7,6 +7,6 @@ Nom: Garçon de course
 <p>Choose two ability boosts. One must be to <strong>Dexterity</strong> or <strong>Intelligence</strong>, and one is a free ability boost.</p>
 <p>You're trained in the Society skill and the Lore skill for the city in which you were raised. You gain the @Compendium[pf2e.feats-srd.WeQGWvlWdeLeOlCN]{Glean Contents} skill feat.</p>
 ------ Description (fr) ------
-<p>Dans votre jeunesse, vous avez gagné de l'argent en transportant des messages pour des personnes fortunées et d'influence, vous faufilant dans les rues pavées bondées. Votre ténacité à délivrer votre message a été un bon entraînement pour une vie d'aventure.</p>
+<p>Dans votre jeunesse, vous avez gagné de l'argent en transportant des messages pour des personnes fortunées et d'influence, vous faufilant dans les rues pavées bondées. Votre ténacité à délivrer votre message, a été un bon entraînement pour une vie d'aventure.</p>
 p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Dextérité </strong> ou d'<strong>Intelligence</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Société et en Connaissance de la Cité dans laquelle vous avez été élevé. Vous obtenez le don @Compendium[pf2e.feats-srd.WeQGWvlWdeLeOlCN]{Glaner des informations}.</span></p>
