--- a/data/feats/archetype-08-oSi9mUtYWYekxX0B.htm
+++ b/data/feats/archetype-08-oSi9mUtYWYekxX0B.htm
@@ -8,4 +8,4 @@ PrereqFR: Dévouement de Chercheur mystique
 <p>Your readings on rituals make you a skilled participant. You gain a +2 circumstance bonus to primary and secondary checks you attempt as part of casting a ritual.</p>
 ------ Description (fr) ------
 <p>Vos lectures sur les rituels ont fait de vous un participant compétent.</p>
-<p>Vous obtenez un bonus de circonstances de +2 aux tests primaires et secondaires que vous tentez faisant partie de l'incantation d'un rituel.</p>
+<p>Vous obtenez un bonus de circonstances de +2 aux tests primaires et secondaires faisant partie de l'incantation d'un rituel que vous tentez.</p>
