--- a/data/feats/ancestry-01-A1RzkLCj7mXJI1IY.htm
+++ b/data/feats/ancestry-01-A1RzkLCj7mXJI1IY.htm
@@ -11,4 +11,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie Uhlam</p>
 <hr>
-<p>Votre famille a instillé en vous des valeurs de soin et de patience depuis votre plus jeune âge. Vous obtenez un bonus de circonstances de +1 aux tests pour accomplir une activité d'intermède.</p>
+<p>Votre famille a instillé en vous des valeurs d'implication' et de patience depuis votre plus jeune âge. Vous obtenez un bonus de circonstances de +1 aux tests pour accomplir une activité d'intermède.</p>
