--- a/data/equipment/consumable-10-XWkeL34yJK6t5qUE.htm
+++ b/data/equipment/consumable-10-XWkeL34yJK6t5qUE.htm
@@ -1,13 +1,13 @@
 Name: Antidote (Greater)
 Nom: Antidote (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interact</p>
 <p>An antidote protects you against toxins. Upon drinking an antidote, you gain a +4 item bonus to Fortitude saving throws against poisons for 6 hours.</p>
 <p>@Compendium[pf2e.consumable-effects.QuZ5frBMJF3gi7RY]{Effect: Antidote (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><span>L’antidote vous protège contre les toxines. Lorsque vous le buvez, vous recevez un bonus d’objet aux jets de Vigueur contre les poisons pendant 6 heures. </span></p>
-<p><span>Vous gagnez un bonus d’objet de +4. </span></p>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p>L’antidote vous protège contre les toxines. Lorsque vous le buvez, vous recevez un bonus d’objet aux jets de Vigueur contre les poisons pendant 6 heures.</p>
+<p>Vous gagnez un bonus d’objet de +4.</p>
+<p>@Compendium[pf2e.consumable-effects.QuZ5frBMJF3gi7RY]{Effet: Antidote (Supérieur)}</p>
