--- a/data/feats/ancestry-01-TmaxLWraJrvSQOkY.htm
+++ b/data/feats/ancestry-01-TmaxLWraJrvSQOkY.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>You conjure uncanny orbs of spiritual flame that float above or below the water’s surface. You can cast the @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Produce Flame} cantrip as a primal innate spell at will, heightened to a spell level equal to half your level rounded up. You can cast this cantrip underwater.</p>
 ------ Description (fr) ------
-<p>Vous conjurez des orbes étonnantes de flamme spirituelle qui flottent au dessus ou au dessous de la surface de l'eau. Vous pouvez lancer le tour de magie @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Flammes} comme un sort inné primordial à volonté, intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur. Vous pouvez lancer ce tour de magie sous l'eau.</p>
+<p>Vous conjurez des orbes étonnantes de flamme spirituelle qui flottent au-dessus ou eu-dessous de la surface de l'eau. Vous pouvez lancer le tour de magie @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Flammes} comme un sort inné primordial à volonté, intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur. Vous pouvez lancer ce tour de magie sous l'eau.</p>
