--- a/data/feats/ancestry-01-Ugw1zZStQhg6iz8h.htm
+++ b/data/feats/ancestry-01-Ugw1zZStQhg6iz8h.htm
@@ -12,4 +12,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie Mihrini</p>
 <hr />
-<p>On vous a donné des noeuds à défaire, des serrures à ouvrir et des puzzles de forgeron depuis que vous êtes enffant pour vous occuper les mains à faire quelque chose. Vous êtes qualifié en Vol (ou une compétence de votre choix, si vous étiez déjà qualifié en Vol). Si vous obtenez un succès sur un test de Vol à un test pour @Compendium[pf2e.actionspf2e.2EE4aF4SZpYf0R6H]{Crocheter une serrure}, vous obtenez un succès critique à la place.</p>
+<p>Depuis que vous êtes enfant, on vous a donné des noeuds à défaire, des serrures à ouvrir et des puzzles de forgeron pour vous occuper les mains. Vous êtes qualifié en Vol (ou une compétence de votre choix, si vous étiez déjà qualifié en Vol). Si vous obtenez un succès sur un test de Vol à un test pour @Compendium[pf2e.actionspf2e.2EE4aF4SZpYf0R6H]{Crocheter une serrure}, vous obtenez un succès critique à la place.</p>
