--- a/data/pathfinder-bestiary-2/3VFHZyjSjNA1jbiO.htm
+++ b/data/pathfinder-bestiary-2/3VFHZyjSjNA1jbiO.htm
@@ -1,8 +1,8 @@
 Name: Sportlebore Swarm
-Nom: Nuée de Sportlebores
+Nom: Nuée de sportlebores
 État: libre
 
 ------ Description (en) ------
 A swarm of sportlebores is a much more dangerous foe than a single insect.<br /><br />
 ------ Description (fr) ------
-Une nuée de Sportlebores est un ennemi bien plus dangereux qu'un seul insecte.<br /><br />
+Une nuée de sportlebores est un ennemi bien plus dangereux qu'un unique insecte.<br /><br />
