--- a/data/feats/ancestry-01-yQZ6naE8AP6JYTSH.htm
+++ b/data/feats/ancestry-01-yQZ6naE8AP6JYTSH.htm
@@ -8,8 +8,8 @@ PrereqFR:
 ------ Description (en) ------
 <p>Your eyes blaze with inner flame. You gain @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}, or you gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision} if your ancestry already has low-light vision.</p>
 <hr />
-<p><strong>Specia</strong> l If your ancestry has neither low-light vision nor darkvision, you can take this ancestry feat a second time to gain darkvision. You can’t retrain out of this feat.</p>
+<p><strong>Special</strong> l If your ancestry has neither low-light vision nor darkvision, you can take this ancestry feat a second time to gain darkvision. You can’t retrain out of this feat.</p>
 ------ Description (fr) ------
 <p>Vos yeux s'embrasent de votre flamme intérieure. Vous obtenez @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Vision nocturne} ou vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir} si votre  ascendance possède déjà vision nocturne.</p>
 <hr />
-<p><strong>Spécial</strong> Si votre ascendance n'a ni vision nocturne, ni vision dans le noir, vous pouvez prendre ce don d'ascendance une seconde fois pour obtenir vision dans le noir. You can’t retrain out of this feat.</p>
+<p><strong>Spécial</strong> Si votre ascendance n'a ni vision nocturne, ni vision dans le noir, vous pouvez prendre ce don d'ascendance une seconde fois pour obtenir vision dans le noir. Vous ne pouvez pas vous entraîner pour l'acquérir.</p>
