--- a/data/feats/ancestry-01-xOCmeskMkd8nCmba.htm
+++ b/data/feats/ancestry-01-xOCmeskMkd8nCmba.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>Your mother was a moon hag, a handmaiden of Groetus, and you have a single scarlet eye and a sliver of her supernal foresight. You can cast @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Guidance} as an occult innate cantrip. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
 ------ Description (fr) ------
-<p>Votre mère était une guenaude de la lune, une vierge viergeservante de Groetus, et vous avez un unique œil écarlate et un éclat de leur céleste prescience. Vous pouvez lancer @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Assistance divine} comme un tour de magie inné occulte. Un tour de magie est intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur.</p>
+<p>Votre mère était une guenaude de la lune, une servante de Groetus, et vous avez un unique œil écarlate et un éclat de leur céleste prescience. Vous pouvez lancer @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Assistance divine} comme un tour de magie inné occulte. Un tour de magie est intensifié à un niveau de sort égal à la moitié de votre niveau arrondi au supérieur.</p>
