--- a/data/feats/ancestry-05-5AnJTAZnuWrkL8fa.htm
+++ b/data/feats/ancestry-05-5AnJTAZnuWrkL8fa.htm
@@ -12,5 +12,5 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> Elfe de la Tour acérée</p>
 <hr />
-<p>Vous abhorrez les alghollthus et leur magie de l'esprit et vous avez été entraîné à préférer la mort plutôt que de permettre d'être l'objet d'une manipulation mentale.</p>
-<p>Si vous débutez votre tour @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{confus}, @Compendium[pf2e.conditionitems.9qGBRpbX9NEwtAAr]{Contrôlé} ou @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En fuite} à cause de l'échec d'un jet de Volonté, vous pouvez tenter un jet de Volonté contre le même DD ; sur un succès, vous êtes @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysé} jusqu'à votre prochain tour, au lieu d'agir contre votre volonté.</p>
+<p>Vous abhorrez les Alghollthus et leur magie de l'esprit et vous avez été entraîné à préférer la mort plutôt que de permettre d'être l'objet d'une manipulation mentale.</p>
+<p>Si vous débutez votre tour @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}, @Compendium[pf2e.conditionitems.9qGBRpbX9NEwtAAr]{Contrôlé} ou @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En fuite} à cause de l'échec d'un jet de Volonté, vous pouvez tenter un jet de Volonté contre le même DD ; sur un succès, vous êtes @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysé} jusqu'à votre prochain tour, au lieu d'agir contre votre volonté.</p>
