--- a/data/feats/ancestry-05-wjhhlh82MABhfxCO.htm
+++ b/data/feats/ancestry-05-wjhhlh82MABhfxCO.htm
@@ -1,5 +1,5 @@
 Name: Strix Vengeance
-Nom: Vengeance strix
+Nom: Vengeance Strix
 PrereqEN: 
 PrereqFR: 
 État: changé
@@ -12,6 +12,6 @@ PrereqFR:
 <p>You dedicate yourself to destroying those who harm your kin. Until the end of your next turn, you deal an additional +1d6 damage on Strikes against the triggering enemy. The bonus increases to +2d6 if you use a @Compendium[pf2e.equipment-srd.DxCuJKynlnMQZHgp]{Striking} weapon or unarmed attack and +3d6 if you use a @Compendium[pf2e.equipment-srd.woxl2FrrgAcJDu0t]{Striking (Major)} weapon or unarmed attack.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
-<p><strong>Déclencheur</strong> Vous un un allié strix que vous pouvez utiliser subissent des dégâts par un coup critique d'un ennemi.</p>
+<p><strong>Déclencheur</strong> Vous, ou un allié Strix que vous pouvez voir, subissez des dégâts par un coup critique d'un ennemi.</p>
 <hr />
 <p>Vous vous dévouez pour détruire ceux qui ont blessé les vôtres. Jusqu'à la fin de votre prochain tour, vous infligez +1d6 dégâts supplémentaires sur les Frappes contre l'ennemi déclencheur. Le bonus passe à +2d6 si vous utilisez une @Compendium[pf2e.equipment-srd.DxCuJKynlnMQZHgp]{Frappe} d'arme ou une attaque à mains nues et +3d6 si vous utilisez une attaque avec une arme ou une attaque à mains nues de @Compendium[pf2e.equipment-srd.woxl2FrrgAcJDu0t]{Frappe (Majeure)}.</p>
