--- a/data/feats/ancestry-05-oEvcWFvBnsZ03OGW.htm
+++ b/data/feats/ancestry-05-oEvcWFvBnsZ03OGW.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>You’ve learned how to throw your voice through the winds, tricking others as to your location. You can cast @Compendium[pf2e.spells-srd.yV7Ouzaoe7DHLESI]{Ventriloquism} as a primal innate spell once per day. If you’re a songbird strix, you can cast it twice per day instead.</p>
 ------ Description (fr) ------
-<p>Vous avez appris à prjeter votre voix à travers le vent, abusant les autres quant à votre emplacement. Vous pouvez lancer @Compendium[pf2e.spells-srd.yV7Ouzaoe7DHLESI]{Ventriloquie} comme un sort primordial inné une fois par jour. Si vous êtes un strix oiseauchanteur, vous pouvez le lancer deux fois par jour à la place.</p>
+<p>Vous avez appris à projeter votre voix à travers les vents, abusant les autres quant à votre emplacement. Vous pouvez lancer @Compendium[pf2e.spells-srd.yV7Ouzaoe7DHLESI]{Ventriloquie} comme un sort primordial inné une fois par jour. Si vous êtes un Strix oiseau-chanteur, vous pouvez le lancer deux fois par jour à la place.</p>
