--- a/data/feats/ancestry-09-8buK32r3i3aGyyOR.htm
+++ b/data/feats/ancestry-09-8buK32r3i3aGyyOR.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>The magic of shaitans runs through your blood. You can cast @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Glitterdust} and @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Resist Energy} once per day each as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>La magie des shaitans court dans votre sang. Vous pouvez lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie} une fois par jour comme des sorts arcaniques innés de niveau 2.</p>
+<p>La magie des Shaitans court dans vos veines. Vous pouvez lancer @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante} et @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie} une fois par jour comme des sorts arcaniques innés de niveau 2.</p>
