--- a/data/feats/ancestry-09-ATiQDz27aiBTAt17.htm
+++ b/data/feats/ancestry-09-ATiQDz27aiBTAt17.htm
@@ -12,5 +12,5 @@ PrereqFR: gobelin incassable|Gobelin rebondissant
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Un ennemi vous touche avec une arme de corps à corps ou une attaque à mains nues.</p>
 <hr />
-<p>Lorsque vous recevez un grand coup, votre ennemi vous propulse comme une boule de gomme, mais vous échappez au pire effet du coup.</p>
+<p>Vous recevez un grand coup, votre ennemi vous propulse comme une boule de gomme, mais vous échappez au pire effet du coup.</p>
 <p>Votre ennemi peut vous déplacer à toute distance de son choix jusqu'à 9 m (ce n'est pas un déplacement forcé et cela déclenche les réactions comme habituellement). Vous vous retrouvez @Compendium[pf2e.conditionspf2e.j91X7x0XSomq8d60]{À terre} et êtes @Compendium[pf2e.conditionspf2e.dfCMdR4wnpbYNTix]{Étourdi} 1. Faites un test nu contre un DD 6. Sur une réussite, vous subissez les dégâts minimum de l'attaque et sur un succèss critique, si l'attaque était un coup critique, vous ne subissez pas les dégâts doublés du coup critique.</p>
