--- a/data/pathfinder-bestiary-2/6ic6oNCpWjkVAsIN.htm
+++ b/data/pathfinder-bestiary-2/6ic6oNCpWjkVAsIN.htm
@@ -5,4 +5,4 @@ Nom: Renard de Braise
 ------ Description (en) ------
 Ember foxes resemble their canid namesakes, save for the flames that make their fur and the tips of their long whiskers flicker and glow.<br /><br />
 ------ Description (fr) ------
-Les Renards de Braise ressemblent à leurs homonymes canidés, si ce n'est les flammes qui font scintiller et briller leur fourrure et le bout de leurs longues moustaches.<br /><br />
+Les renards de braise ressemblent à leurs homonymes canidés, si ce n'est les flammes qui font scintiller et briller leur fourrure et le bout de leurs longues moustaches.<br /><br />
