--- a/data/pathfinder-bestiary-2/7lL7APeHQgkVxU1B.htm
+++ b/data/pathfinder-bestiary-2/7lL7APeHQgkVxU1B.htm
@@ -1,8 +1,8 @@
 Name: Fire Jellyfish Swarm
-Nom: Nuée de Méduses de Feu
+Nom: Nuée de méduses de feu
 État: libre
 
 ------ Description (en) ------
 While individually one of these fist-sized jellyfish is merely a nuisance, in great numbers, fire jellyfish can form into dangerous swarms. Bobbing in the water, they create a cloud of stinging tentacles. They were named in part for their bright coloration, but those who are stung by fire jellyfish learn the larger reason for their name-the pain of their stings is comparable to being burned alive.<br /><br />
 ------ Description (fr) ------
-Alors qu'individuellement, une de ces méduses de la taille d'un poing n'est qu'une nuisance, en grand nombre, les Méduses de Feu peuvent se transformer en dangereuses nuées. En se balançant dans l'eau, elles créent un nuage de tentacules urticants. Elles ont été nommées en partie pour leur couleur vive, mais ceux qui sont piqués par les Méduses de Feu apprennent la raison principale de leur nom : la douleur de leurs piqûres est comparable à celle d'être brûlés vifs.<br /><br />
+Alors qu'individuellement, une de ces méduses de la taille d'un poing n'est qu'une nuisance, en grand nombre, les Méduses de feu peuvent se transformer en dangereuses nuées. En flottant dans l'eau, elles créent un nuage de tentacules urticants. Elles ont été nommées en partie pour leur couleur vive, mais ceux qui sont piqués par les méduses de feu apprennent la véritable raison de leur nom : la douleur de leurs piqûres est comparable à celle qui résulte d'être brûlé vif.<br /><br />
