--- a/data/feats/class-04-wjnfdh6WzN7HbmeE.htm
+++ b/data/feats/class-04-wjnfdh6WzN7HbmeE.htm
@@ -1,7 +1,7 @@
 Name: Aura Of Despair
 Nom: Aura de désespoir
 PrereqEN: tenets of evil
-Avantage:
+Avantage: Votre présence telle une incarnation maléfique effraie vos adversaires.
 PrereqFR: préceptes du mal
 État: changé
 État d'origine: libre
@@ -11,5 +11,5 @@ PrereqFR: préceptes du mal
 <p>Enemies within 15 feet of you take a -1 circumstance penalty to saving throws against fear. In addition, an enemy that ends its turn within 15 feet of you can't reduce the value of its @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened} condition below 1.</p>
 <p>@Compendium[pf2e.feat-effects.MNkIxAishE22TqL3]{Effect: Aura of Despair}</p>
 ------ Description (fr) ------
-<p>Votre présence comme une incarnation maléfique rend vos adversaires plus susceptibles à la peur et presque impossible pour eux de récupérer de leur peur lorsque vous êtes à proximité.</p>
-<p>Les adversaires dans les 4,5 m de vous subissent une pénalité de circonstance de -1 à leurs jets de protection contre la peur. En plus, un ennemi qui termine son tour dans les 4,5 m de vous ne peut réduire la valeur de sa condition @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé} en dessous de 1.</p>
+<p>Votre présence telle une incarnation maléfique rend vos adversaires plus susceptibles à la peur et il leur est presque impossible de récupérer de leur peur lorsque vous êtes à proximité.</p>
+<p>Les adversaires dans les 4,5 mètres de vous, subissent une pénalité de circonstance de -1 à leurs jets de protection contre la peur. En plus, un ennemi qui termine son tour dans les 4,5 mètres de vous ne peut réduire la valeur de sa condition @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé} en dessous de 1.</p>
