--- a/data/feats/class-04-TNpoEG0cUEAuSju7.htm
+++ b/data/feats/class-04-TNpoEG0cUEAuSju7.htm
@@ -1,7 +1,7 @@
 Name: Sun Blade
 Nom: Lame solaire
 PrereqEN: 
-Avantage:
+Avantage: Vous déchaînez la lumière du soleil avec votre épée ou votre lance.
 PrereqFR: 
 État: changé
 État d'origine: libre
@@ -12,4 +12,4 @@ PrereqFR:
 <p>You can unleash burning sunlight from your sword or spear.</p>
 <p>You gain the @Compendium[pf2e.spells-srd.pMTltbI3S3UIuFaR]{Sun Blade} devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous pouvez déchainer la lumière du soleil avec votre épée ou votre lance. Vous obtenez le sort de dévotion @Compendium[pf2e.spells-srd.pMTltbI3S3UIuFaR]{lame solaire}. Augmentez de 1 le nombre de points de focalisation de votre réserve de focalisation.</p>
+<p>Vous pouvez déchaîner la lumière du soleil avec votre épée ou votre lance. Vous obtenez le sort de dévotion @Compendium[pf2e.spells-srd.pMTltbI3S3UIuFaR]{lame solaire}. Augmentez de 1 le nombre de points de focalisation de votre réserve de focalisation.</p>
