--- a/data/feats/class-04-sahJHnojXO9eEXVE.htm
+++ b/data/feats/class-04-sahJHnojXO9eEXVE.htm
@@ -1,7 +1,7 @@
 Name: Inspire Defense
 Nom: Inspiration défensive
 PrereqEN: maestro muse
-Avantage:
+Avantage: Vos tours de magie de composition vous protègent ainsi que vos alliés  
 PrereqFR: muse virtuose
 État: changé
 État d'origine: officielle
